# guess_the_number

./: CMakeLists.txt  argument.cpp  check_value.cpp  high_scores.cpp  main.cpp  random_value.cpp
include/: check_value.h  high_scores.h  random_value.h
